Many updates, skeljs broken...

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,14 +70,14 @@
 								</ul>
 							</nav>
 
-						<!-- Search -->
+						<!-- Search 
 							<section class="is-search">
 								<form method="post" action="#">
 									<input type="text" class="text" name="search" placeholder="Search" />
 								</form>
 							</section>
-					
-						<!-- Text -->
+						-->
+						<!-- Text 
 							<section class="is-text-style1">
 								<div class="inner">
 									<p>
@@ -86,8 +86,8 @@
 									</p>
 								</div>
 							</section>
-					
-						<!-- Recent Posts -->
+						-->
+						<!-- Recent Posts
 							<section class="is-recent-posts">
 								<header>
 									<h2>Recent Posts</h2>
@@ -100,8 +100,8 @@
 									<li><a href="#">Temporal Flux</a></li>
 								</ul>
 							</section>
-					
-						<!-- Recent Comments -->
+						 -->
+						<!-- Recent Comments
 							<section class="is-recent-comments">
 								<header>
 									<h2>Recent Comments</h2>
@@ -112,8 +112,8 @@
 									<li>case on <a href="#">Temporal Flux</a></li>
 								</ul>
 							</section>
-					
-						<!-- Calendar -->
+					 	-->
+						<!-- Calendar 
 							<section class="is-calendar">
 								<div class="inner">
 									<table>
@@ -174,13 +174,12 @@
 									</table>
 								</div>
 							</section>
-						
+						-->
 						<!-- Copyright -->
 							<div id="copyright">
 								<p>
-									&copy; 2013 An Untitled Site.<br />
-									Images: <a href="http://n33.co">n33</a>, <a href="http://fotogrph.com">fotogrph</a><br />
-									Design: <a href="http://html5up.net/">HTML5 UP</a>
+									&copy; 2014 Al Grant.<br />
+									Original by:<a href="http://html5up.net/striped">HTML5 UP</a>
 								</p>
 							</div>
 
