--- a/media/css/style-wide.css
+++ b/media/css/style-wide.css
@@ -95,8 +95,8 @@
 				display: block;
 				font-size: 1.5em;
 				color: #999;
-				border-bottom: solid 1px #ddd;
-				padding: 0 0 1em 0;
+				/*border-bottom: solid 1px #ddd;
+				padding: 0 0 1em 0;*/
 				margin: 0 0 0.75em 0;
 			}
 
