--- a/media/css/style.css
+++ b/media/css/style.css
@@ -20,6 +20,19 @@
 		-ms-box-sizing: border-box;
 		box-sizing: border-box;
 	}
+	img
+	{
+		max-width: 100%;
+		display: block;
+		margin: auto;
+		padding-bottom:1em;
+	}
+
+	img + span.caption {
+		text-align:center;
+		display: block;
+		margin-top: -1.25em;
+	}
 
 	body, input, textarea
 	{
@@ -204,6 +217,8 @@
 		margin-bottom: 1em;
 	}
 	
+
+
 	section,
 	article
 	{
