--- a/templates/base.html
+++ b/templates/base.html
@@ -194,5 +194,6 @@
 				{# JavaScript init block for templates to include thier own JS #}
 	            {% block js_init %}{% endblock %}
             </script>
+            {% block jsLoad %}{% endblock %}
 	</body>
 </html>
