--- a/templates/blog-article.html
+++ b/templates/blog-article.html
@@ -55,7 +55,7 @@
         </article>
 
     <div id='article-footer'>
-        <a href='/blog'>&laquo; Back to blog list</a>
+        <a href='/projects'>&laquo; Back to project list</a>
     </div>
 
     <!-- Disquis comment system -->
