--- a/templates/blog-list.html
+++ b/templates/blog-list.html
@@ -54,7 +54,7 @@
                     <span class="month">Dec<span>ember</span></span> 
                 {% endif %}             
                     <span class="day">{{ page.date.day }}</span>
-                    <span class="year">, {{ page.date.year }}</span>
+                    <span class="year"><span>,</span> {{ page.date.year }}</span>
                 </span>
 				<!--
 					Note: You can change the number of list items in "stats" to whatever you want.
