Added home page and a gallery option

--- a/media/css/style-narrower.css
+++ b/media/css/style-narrower.css
@@ -90,6 +90,7 @@
 		#titleBarNarrower .title img{
 			height:55px;
 			padding-top:3px;
+			padding-bottom:1px;
 		}
 /*********************************************************************************/
 /* Side Panel                                                                    */
