Centered social icons, updated readme

--- a/templates/base.html
+++ b/templates/base.html
@@ -75,7 +75,7 @@
 							</nav>
 
 							<section class="is-text-style1">
-								<div class="inner">
+								<div style="text-align:center">
 									<a href="http://github.com/algrant"><img src="/css/images/github-9-24.png"  style="display:inline-block; padding-bottom: 0"/></a>
 									<a href="http://twittter.com/algrantspants"><img style="display:inline-block; padding-bottom: 0" src="/css/images/twitter-24.png" /></a>
 								</div>
