Prep for github, remove unnecessary files

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -31,7 +31,8 @@
 	img + span.caption {
 		text-align:center;
 		display: block;
-		margin-top: -1.25em;
+		margin-top: -1em;
+		font-weight: bold;
 	}
 
 	body, input, textarea
