Added linkedin links, centred icons

--- a/templates/base.html
+++ b/templates/base.html
@@ -76,8 +76,9 @@
 
 							<section class="is-text-style1">
 								<div style="text-align:center">
-									<a href="http://github.com/algrant"><img src="/css/images/github-9-24.png"  style="display:inline-block; padding-bottom: 0"/></a>
-									<a href="http://twittter.com/algrantspants"><img style="display:inline-block; padding-bottom: 0" src="/css/images/twitter-24.png" /></a>
+									<a href="http://github.com/algrant" target="_blank"><img src="/css/images/github-9-24.png"  style="display:inline-block; padding-bottom: 0; padding: 0 10px;"/></a>
+									<a href="http://twitter.com/algrantspants" target="_blank"><img style="display:inline-block; padding-bottom: 0; padding: 0 10px;" src="/css/images/twitter-24.png" /></a>
+									<a href="http://linkedin.com/pub/alexander-grant" target="_blank"> <img style="display:inline-block; padding-bottom: 0; padding: 0 10px;" src="/css/images/linkedin-5-24.png"> </a>
 								</div>
 							</section>
 						<!-- Copyright -->
